Bug 257234 - After deleting an event with attendee, the organizer is not asked to send delete update mail and no mail is sent
Summary: After deleting an event with attendee, the organizer is not asked to send del...
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI major
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-18 12:14 UTC by Ludwig Reiter
Modified: 2010-12-02 15:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-11-18 12:14:06 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: kdepim-mobile 20101118.1198236-1maemo1.1198084

Reproducible: Always

Steps to Reproduce:
1. Create an event with attendee.
2. Delete this event.

Actual Results:  
The event is deleted without informing the attendee.

Expected Results:  
If the organizer deletes an event with attendees, he should be asked to send an update deleting mail, and this mail should possibly be sent.
Comment 1 Sergio Martins 2010-11-19 11:02:38 UTC
SVN commit 1198699 by smartins:

Go through groupware logic before deleting an incidence.

BUG: 257234

 M  +3 -1      KorganizerActions.qml  
 M  +7 -0      korganizer-mobile.qml  
 M  +6 -0      mainview.cpp  
 M  +1 -0      mainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198699
Comment 2 Ludwig Reiter 2010-12-02 15:37:14 UTC
version: 20101202-1202744-1maemo1

can send a delete event mail.