Go through groupware logic before deleting an incidence.

BUG: 257234

svn path=/trunk/KDE/kdepim/mobile/; revision=1198699