mobile/calendar/KorganizerActions.qml
@@ -184,7 +184,9 @@ ActionMenuContainer {
     ScriptActionItem { name : "edit_event"; title : KDE.i18n( "Edit Event" ) }
     ActionListItem { name : "akonadi_item_copy_to_dialog" }
     ActionListItem { name : "akonadi_item_move_to_dialog" }
-    ActionListItem { name : "akonadi_item_delete" }
+
+    // contains groupware code, which is not in sam/scam yet
+    ScriptActionItem { name : "incidencechanger_delete"; title : KDE.i18n( "Delete Event" ) }
   }
 
   ApplicationGeneralActions {
